--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,7 +31,7 @@
     <header class="flex justify-between items-center z-10">
         <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
         <nav class="space-x-2">
-            <a href="signup.html"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
+            <a href="signup.php"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
             <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
         </nav>
     </header>
