--- a/Frontend/signin.html
+++ b/Frontend/signin.html
@@ -25,7 +25,7 @@
   <header class="flex justify-between items-center z-10">
     <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
     <nav class="space-x-2">
-        <a href="signup.html"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
+        <a href="signup.php"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
     </nav>
   </header>
         <main>
@@ -50,7 +50,7 @@
                   <button class="button-submit">Sign In</button>
                 </div>            
               
-                <p class="p">Don't have an account? <a href="signup.html"><span class="span">Sign Up</span></p></a>
+                <p class="p">Don't have an account? <a href="signup.php"><span class="span">Sign Up</span></p></a>
             </form>
           </section>
         </main>
